--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "font-awesome": "fontawesome#^4.7.0"
+    "font-awesome": "fontawesome#^4.7.0",
+    "waypoints": "^4.0.1"
   }
 }
